<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- The app name that shows up in Android launcher / App drawer -->
    <string name="app_name">2020PB</string>

    <!-- Screen Titles -->
    <string name="title_brutality_incidents">Reported Incidents</string>
    <string name="title_incidents_at_location">Incidents at %s</string>
    <string name="title_incidents_on_date">Incidents on %s</string>
    <string name="title_incidents_most_recent">Latest Incidents</string>
    <string name="title_report_new_incident">Report Incident</string>
    <string name="title_more_info_and_sources">Additional Resources</string>
    <string name="title_donate_for_cause">Donate for Cause</string>
    <string name="title_filter_incidents_by_date">Filter incident by specific date</string>
    <string name="title_dialog_disclaimer">DISCLAIMER</string>

    <!-- Menu Titles -->
    <string name="menu_title_brutality_incidents">Incidents</string>
    <string name="menu_title_report_new_incident">Report</string>
    <string name="menu_title_more_info_and_sources" tools:ignore="DuplicateStrings">Info</string>
    <string name="menu_title_donate_to_charity" tools:ignore="DuplicateStrings">Donate</string>
    <string name="menu_title_donate_disclaimer_info" tools:ignore="DuplicateStrings">Info</string>
    <string name="menu_title_about_app" tools:ignore="DuplicateStrings">About App</string>
    <string name="menu_title_share_app">Share App</string>
    <string name="menu_title_date_filter">Filter by Date</string>
    <string name="menu_title_refresh">Refresh</string>

    <!-- User messages - info, success, error etc -->
    <string name="message_hashtag_copied_to_clipboard">The %s hash tag has been copied to your clipboard.</string>
    <string name="unable_to_load_url">Unable to load selected URL due to internal issue. Try different external URLs.</string>
    <string name="unable_to_load_report_incident_url">Unable to load report incident from app. Visit original GitHub repository to report incident. See &#8220;More Info&#8221; section for additional resources.</string>
    <string name="message_no_incident_found_on_selected_date">Sorry, there are no incidents reported on selected date %1$s</string>
    <string name="message_incident_refreshed">Successfully refreshed %1$s incidents from source &#8216;2020PB/police-brutality&#8217;.</string>
    <string name="message_incident_refresh_fail">Sorry, we are unable to refresh new incidents data at the moment. Please try again later.</string>
    <string name="message_share_confirmation">Share this incident with %1$s external link(s)?</string>
    <string name="message_share_incident_capability">Did you know, you can share a incident details by just tapping on the item from the list?</string>
    <string name="message_charity_donation_landing_first_time_info">Consider helping the cause, every $ helps. Tap on the (i) info icon to learn more.</string>

    <!-- Content description for accessibility -->
    <string name="content_description_fist_icon">Justice for George Floyd protest fist image icon</string>
    <string name="content_description_george_floyd_graffiti_image">george floyd graffiti</string>
    <string name="content_description_donate_for_cause_image">Donate to support the cause</string>
    <string name="content_description_george_floyd_protest_image">George Floyd protest image with protesters and police</string>
    <string name="content_description_go_back_to_prev_screen">Go back to previous screen</string>
    <string name="content_description_view_most_recent_incidents_list">Show most recent incidents</string>

    <!-- Labels, Button CTA and so on -->
    <string name="label_external_links">External links on this incident</string>
    <string name="button_cta_report_new_incident">Report New Incident</string>
    <string name="label_about_app">About App</string>
    <string name="label_app_resource_credits">Credits</string>
    <string name="button_cta_okay">OK</string>
    <string name="button_cta_thanks">Thanks</string>
    <string name="button_cta_share_app">Share</string>
    <string name="button_cta_share_incident">Share Incident</string>
    <string name="button_cta_charity_learn_more">Learn More</string>
    <string name="button_cta_charity_donate_now" tools:ignore="DuplicateStrings">Donate</string>
    <string name="button_cta_view_most_recent_incidents">Recent</string>

    <!-- Social tags -->
    <string name="hash_tag_blacklivesmatter" translatable="false">#BlackLivesMatter</string>
    <string name="hash_tag_blacklivesmatter_short" translatable="false">#BLM</string>
    <string name="hash_tag_justiceforgeorgefloyd" translatable="false">#JusticeForGeorgeFloyd</string>
    <string name="hash_tag_policebrutality" translatable="false">#PoliceBrutality</string>
    <string name="hash_tags_for_blacklivesmatter">#BlackLivesMatter\n#JusticeForGeorgeFloyd\n#PoliceBrutality</string>

    <!-- Other string resrouces -->
    <string name="total_reported_incident_for_location" tools:ignore="PluralsCandidate">Total %d reported incidents</string>
    <string name="last_reported_incident_status" tools:ignore="PluralsCandidate">Last incident <![CDATA[<big><b>%1$d</b></big>]]> days ago on %2$s</string>
    <string name="incident_location_at_city_state_display_text" description="Example: at Denver, Colorado">at %1$s, %2$s</string>
    <string name="incident_location_at_city_display_text" description="Example: at Denver">at %1$s</string>
    <string name="incident_source_background"><![CDATA[All the reported incidents are part of initiative taken by subreddit \"r/2020PoliceBrutality\" found at www.reddit.com/r/2020PoliceBrutality \n\nThis subreddit exists to document the violence committed by law enforcement on peaceful protesters during the protests & riots of 2020 following the murder of George Floyd. \n\nThese incidents are documented on Github at github.com/2020PB/police-brutality with further information. If you would like to contribute to this repository, please check the contribution guide at the repository.]]></string>

    <!--
        Using HTML content to provide rich description for the
        References:
        - https://developer.android.com/reference/android/text/Html
        - https://commonsware.com/blog/Android/2010/05/26/html-tags-supported-by-textview.html
    -->
    <string name="report_new_incident_guideline_text"><![CDATA[<p>All the <b>police brutality</b> incident during the 2020 George Floyd protests
    are currently recorded at <a href=\"https://github.com/2020PB/police-brutality\">2020PB/police-brutality</a> GitHub repository.<p>

    <p>Please read the <a href="https://github.com/2020PB/police-brutality/blob/master/CONTRIBUTING.md"><b>Contribution Guidelines</b></a>
    first to find out the Incident Report Guidelines and Frequently Asked Questions (FAQ).</p>]]></string>

    <string name="message_report_incident_external_link_info">NOTE: This opens link on your browser app. You will need GitHub account to report incident in the &#8216;2020PB/police-brutality&#8217; GitHub repository.</string>
    <string name="info_message_about_app_background"><![CDATA[This app is developed to provide easy access to police brutality incidents that happened during protest for George Floyd\'s murder.\n\nThe app is open-source and available for contribution. If you find issue you can report it at bit.ly/PB2020App]]></string>
    <string name="info_message_about_app_credits"><![CDATA[The app is actively maintained by following people:\n • Hossain Khan (hossain.dev)\n\nArtwork Credits:\n • Credits and links for images and icons used in the app can be found at https://bit.ly/PB2020AppCredits]]></string>
    <string name="app_splash_subtitle_about_cause">… a collection of Police brutality incidents during George Floyd protests ✊</string>
    <string name="share_android_app_with_friends_body_title">Check this Android app that shows all the reported Police brutality incidents during protests for George Floyd\'s murder.</string>
    <string name="share_android_app_with_friends_body_content">Hey, check this Android app out, it provides access to all the reported police brutality incidents that happened following the murder of George Floyd on May 25th, 2020.
        \n\n Get it on Google Play at:
        \nhttps://play.google.com/store/apps/details?id=%1$s
        \n\n Popular social media hash-tags:
        \n  %2$s
        \n  %3$s
        \n  %4$s
        \n\n
        \nCredits: All the data is reported via https://github.com/2020PB/police-brutality
    </string>
    <string name="label_most_used_hash_tags">Most used hash tags</string>
    <string name="lorem_ipsum_single_paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="message_charity_list_not_affiliated_with_app"><![CDATA[This app or \'r/2020PoliceBrutality\' is not affiliated with any of the charities listed here.
        This is provided as a convenience only to easily find relevant charities that are working for this cause.
        \n\nIf you don\'t find any of the charities listed here relevant, then you should try to do your own research to find suitable charity that aligns with your principals.
        \n\nThank you.]]></string>

</resources>