<?xml version="1.0" encoding="utf-8"?>

<!--
    NOTE: The navigation ID must match with Jetpack navigation destination ID.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu_incident"
        android:icon="@drawable/ic_fist_raised"
        android:title="@string/menu_title_brutality_incidents" />

    <item
        android:id="@+id/navigation_menu_report"
        android:icon="@drawable/ic_bullhorn"
        android:title="@string/menu_title_report_new_incident" />

    <item
        android:id="@+id/navigation_menu_donate"
        android:icon="@drawable/ic_donate_for_cause"
        android:title="@string/menu_title_donate_to_charity" />

    <item
        android:id="@+id/navigation_menu_more_info"
        android:icon="@drawable/ic_info_circle"
        android:title="@string/menu_title_more_info_and_sources" />
</menu>