<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/activity_horizontal_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_app_title"
        style="?textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing_large"
        android:drawableStart="@drawable/ic_baseline_code_24"
        android:text="@string/label_about_app"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_app_description"
        style="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing_medium"
        android:autoLink="web"
        android:text="@string/info_message_about_app_background"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/about_app_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/credits_title"
        style="?textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing_xxlarge"
        android:drawableStart="@drawable/ic_baseline_emoji_people_24"
        android:text="@string/label_app_resource_credits"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/about_app_description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/credits_description"
        style="?textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing_medium"
        android:autoLink="web"
        android:text="@string/info_message_about_app_credits"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/credits_title" />

</androidx.constraintlayout.widget.ConstraintLayout>