<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/view_spacing_xxlarge">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hashtag_1"
        style="?textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing_xxlarge"
        android:shadowColor="?attr/colorAccent"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/hash_tag_blacklivesmatter"
        android:textAlignment="center"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hashtag_2"
        style="?textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing_large"
        android:shadowColor="?attr/colorAccent"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/hash_tag_justiceforgeorgefloyd"
        android:textAlignment="center"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashtag_1"
        tools:text="#JustticeForGeorgeFloyedForEver" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/usa_outline_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@drawable/ic_usa_map_outline"
        android:scaleType="fitCenter"
        android:tint="@color/grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="8:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashtag_2"
        app:srcCompat="@drawable/ic_usa_map_outline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_cause_text"
        style="?textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_splash_subtitle_about_cause"
        android:textAlignment="center"
        android:textStyle="bold"
        app:fontFamily="@font/handlee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashtag_2" />


</androidx.constraintlayout.widget.ConstraintLayout>
