<?xml version="1.0" encoding="utf-8"?>

<!--
    Navigation graph for the app.
    See following for additional information:
    * https://developer.android.com/guide/navigation/navigation-nested-graphs
    * https://developer.android.com/guide/navigation/navigation-pass-data

    Animation Properties Explanation
    ================================
     * `enterAnim`    - The "destination" screen loading animation
     * `exitAnim`     - Animation to remove "source" screen before the "destination" screen loads
     * `popEnterAnim` - Animation to re-appear the "source" screen when destination is
                        removed (usually by pressing "BACK" from the "destination" screen)
     * `popExitAnim`  - Animation when the "destination" screen is removed (eg. by pressing "BACK")
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu_incident">

    <fragment
        android:id="@+id/navigation_menu_incident"
        android:name="com.blacklivesmatter.policebrutality.ui.incidentlocations.LocationFragment"
        android:label="@string/title_brutality_incidents"
        tools:layout="@layout/fragment_incident_locations">
        <action
            android:id="@+id/navigation_to_incidentsFragment"
            app:destination="@id/incidentsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/incidentsFragment"
        android:name="com.blacklivesmatter.policebrutality.ui.incident.IncidentsFragment"
        android:label="@string/title_incidents_at_location"
        tools:layout="@layout/fragment_incidents">

        <!--
            NOTE: The fragment takes 2 kinds of arguments
                  1. Location - where `stateName` required and provided.
                  2. Timestamp - where both `timestamp` and `dateText` are required and provided.
        -->
        <argument
            android:name="stateName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="timestamp"
            android:defaultValue="0L"
            app:argType="long"
            app:nullable="false" />
        <!-- Date display text for the `timestamp` provided above -->
        <argument
            android:name="dateText"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <!-- ================================================== -->
    <!-- ======== End of incident navigation block ======== -->
    <!-- ================================================== -->

    <fragment
        android:id="@+id/navigation_menu_report"
        android:name="com.blacklivesmatter.policebrutality.ui.newreport.NewReportFragment"
        android:label="@string/title_report_new_incident"
        tools:layout="@layout/fragment_new_report" />

    <!-- ========================================================= -->
    <!-- ======== End of report incident navigation block ======== -->
    <!-- ========================================================= -->

    <fragment
        android:id="@+id/navigation_menu_more_info"
        android:name="com.blacklivesmatter.policebrutality.ui.moreinfo.MoreInfoFragment"
        android:label="@string/title_report_new_incident"
        tools:layout="@layout/fragment_more_info" />

    <!-- =================================================== -->
    <!-- ======== End of more info navigation block ======== -->
    <!-- =================================================== -->

</navigation>